feat: add edit capabilities

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Quiz Platform</title>
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <title>Quiz Platform</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <h1>Welcome to the Quiz Platform!</h1>
 <div id="questionsContainer"></div>
 <form id="questionForm">
-  <input type="text" name="question" placeholder="Question" required/>
-  <input type="text" name="answer1" placeholder="Réponse 1" required/>
-  <input type="text" name="answer2" placeholder="Réponse 2" required/>
-  <select name="correct">
-    <option value="answer1">Réponse 1 est correcte</option>
-    <option value="answer2">Réponse 2 est correcte</option>
-  </select>
-  <button type="submit">Créer Question</button>
+    <input type="hidden" name="questionId" value="">
+    <input type="text" name="question" placeholder="Question" required/>
+    <input type="text" name="answer1" placeholder="Réponse 1" required/>
+    <input type="text" name="answer2" placeholder="Réponse 2" required/>
+    <select name="correct">
+        <option value="answer1">Réponse 1 est correcte</option>
+        <option value="answer2">Réponse 2 est correcte</option>
+    </select>
+    <button type="submit" id="submitQuestionButton">Créer Question</button>
+    <button type="button" id="cancelEditButton" style="display:none;">Annuler</button>
 </form>
 <script src="js/quizManager.js"></script>
 </body>
