--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,22 +4,37 @@
     <meta charset="UTF-8">
     <title>Quiz Platform</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-<h1>Welcome to the Quiz Platform!</h1>
-<div id="questionsContainer"></div>
-<form id="questionForm">
-    <input type="hidden" name="questionId" value="">
-    <input type="text" name="question" placeholder="Question" required/>
-    <input type="text" name="answer1" placeholder="Réponse 1" required/>
-    <input type="text" name="answer2" placeholder="Réponse 2" required/>
-    <select name="correct">
-        <option value="answer1">Réponse 1 est correcte</option>
-        <option value="answer2">Réponse 2 est correcte</option>
-    </select>
-    <button type="submit" id="submitQuestionButton">Créer Question</button>
-    <button type="button" id="cancelEditButton" style="display:none;">Annuler</button>
-</form>
+<div class="container mt-5">
+    <h1 class="text-center my-4">Welcome to the Quiz Platform!</h1>
+    <div id="questionsContainer" class="my-4"></div>
+    <form id="questionForm" class="my-4">
+        <input type="hidden" name="questionId" value="">
+        <div class="mb-3">
+            <input type="text" class="form-control" name="question" placeholder="Question" required/>
+        </div>
+        <div class="mb-3">
+            <input type="text" class="form-control" name="answer1" placeholder="Réponse 1" required/>
+        </div>
+        <div class="mb-3">
+            <input type="text" class="form-control" name="answer2" placeholder="Réponse 2" required/>
+        </div>
+        <div class="mb-3">
+            <select name="correct" class="form-select">
+                <option value="answer1">Réponse 1 est correcte</option>
+                <option value="answer2">Réponse 2 est correcte</option>
+            </select>
+        </div>
+        <button type="submit" id="submitQuestionButton" class="btn btn-primary">Créer Question</button>
+        <button type="button" id="cancelEditButton" class="btn btn-secondary" style="display:none;">Annuler</button>
+    </form>
+</div>
 <script src="js/quizManager.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 </html>
