fix: no franglais

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="container mt-5">
-    <h1 class="text-center my-4">Welcome to the Quiz Platform!</h1>
+    <h1 class="text-center my-4">Bienvenue sur ma plateforme de Quiz</h1>
     <div id="questionsContainer" class="my-4"></div>
     <form id="questionForm" class="my-4">
         <input type="hidden" name="questionId" value="">
